kubernetes/azure-k8s/ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_rg-erp_aks-erp_westeurope
  name: azure-load-balancer
  labels:
    run: php-apache
spec:
  loadBalancerIP: 20.76.139.138
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    run: php-apache
